# async_app

./: 404.html  AUTHORS.rst  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  simple_app.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: installation.yml
app/: index.html
app_factory/: index.html
async_app/: __init__.py  app.py  app_factory.py  cli.py  config.py  logger.py  messenger.py  patterns.py  state.py  tools.py
changelog/: index.html
config/: config.md  index.html
contributing/: index.html
docs/: app.md  app_factory.md  async_app.md  common.md  contributing.md  logger.md  messenger.md  patterns.md  tools.md  usage.md
examples/: demo1.py  demo2.py
examples/intro/: index.html
faq/: index.html
installation/: index.html  installation.md
logger/: index.html
messenger/: index.html
patterns/: index.html
search/: search_index.json
state/: index.html  state.md
tests/: __init__.py  test_async_app.py
tools/: index.html
usage/: index.html
