[project]
name = "async_app"
version = "0.1.5"
dynamic = [
    "dependencies",
]
description = "A simple framework to create async apps in Python."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "async_app",
]
license = {text = "MIT License"}
authors = [
  {name = "Jens Nie", email = "jneines@web.de"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

#[project.entry-points."console_scripts"]
#async_app = "async_app.cli:main"

[project.optional-dependencies]
all = [
    "async_app[extra]",
]

#extra = [
#    "pandas",
#]


[tool]
[tool.setuptools.packages.find]
include = ["async_app*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.1.5"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "async_app/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/jneines/async_app"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
